feat: add toogle popup

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,10 @@
   <title>WebModerator!</title>
   <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
-  web-moderator!
+  <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
 </body>
 <script src="popup.js"></script>
+
 </html>
