--- a/app/index.html
+++ b/app/index.html
@@ -42,9 +42,8 @@
       <ol>
         <li>Install extension</li>
         <li>Enable the extension</li>
-        <img src="./images/enable-extension.webp" alt="enable extension">
-        <li>Load demo images</li>
-        <button title="load demo">Demo</button>
+        <img class="img-enable" src="./images/enable-extension.webp" alt="enable extension">
+        <li><button title="load demo">Load demo images</button></li>
       </ol>
       <div class="demo-images"></div>
     </section>
@@ -60,6 +59,8 @@
 
     const getDemoImgs = () => {
       const div = document.getElementsByClassName('demo-images')[0]
+      div.innerHTML = ''
+      
       fetch(`${CONFIG_MANAGER_API}/name/${DEMO_IMG}`)
         .then(res => res.json())
         .then(data => {
