feat: add demo-video

--- a/app/index.html
+++ b/app/index.html
@@ -39,10 +39,22 @@
     </div>
     <section>
       <h3>Demo</h3>
+      <div class="demo-video">
+        <video width="320" height="240" autoplay controls>
+          <source src="./assets/demo-video.ogg" type="video/ogg">
+          Your browser does not support the video tag.
+        </video>
+      </div>
       <ol>
-        <li>Install extension</li>
+        <li>
+          Install extension
+          <ul>
+            <li>Chrome Web Store publish <mark>Pending</mark></li>
+            <li>Manual installation <a href="manual.pdf">PDF</a></li>
+          </ul>
+        </li>
         <li>Enable the extension</li>
-        <img class="img-enable" src="./images/enable-extension.webp" alt="enable extension">
+        <img class="img-enable" src="./assets/enable-extension.webp" alt="enable extension">
         <li><button title="load demo">Load demo images</button></li>
       </ol>
       <div class="demo-images"></div>
