chore: add cloudinary logo to footer

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
           Install extension
           <ul>
             <li>Chrome Web Store publish <mark>Pending</mark></li>
-            <li>Manual installation <a href="manual.pdf">PDF</a></li>
+            <li>Manual installation <a href="https://github.com/geduramc/web-moderator/blob/master/manual-installation.md">link</a></li>
           </ul>
         </li>
         <li>Enable the extension</li>
@@ -61,7 +61,13 @@
     </section>
   </main>
   <footer>
-    <p>By @geduramc &#9749;</p>
+    <p>
+      <a class="geduramc" href="https://github.com/geduramc" target="_blank">@geduramc &#9749;</a>
+      <span class="separator">|</span>
+      <a href="https://cloudinary.com/" target="_blank">
+        <img class="cloudinary-logo" src="./assets/cloudinary.svg" alt="cloudinary-logo">
+      </a>
+    </p>
   </footer>
 </body>
 <script>
