fix: target _blank to manual installation link

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
           Install extension
           <ul>
             <li>Chrome Web Store publish <mark>Pending</mark></li>
-            <li>Manual installation <a href="https://github.com/geduramc/web-moderator/blob/master/manual-installation.md">link</a></li>
+            <li>Manual installation <a href="https://github.com/geduramc/web-moderator/blob/master/manual-installation.md" target="_blank">link</a></li>
           </ul>
         </li>
         <li>Enable the extension</li>
