chore: add blockquote to moderation api disabled

--- a/app/index.html
+++ b/app/index.html
@@ -50,14 +50,18 @@
           Install extension
           <ul>
             <li>Chrome Web Store publish <mark>Pending</mark></li>
-            <li>Manual installation <a href="https://github.com/geduramc/web-moderator/blob/master/manual-installation.md" target="_blank">link</a></li>
+            <li>Manual installation <a href="https://github.com/geduramc/web-moderator/blob/master/manual-installation.md" target="_blank">[ url ]</a></li>
           </ul>
         </li>
         <li>Enable the extension</li>
-        <img class="img-enable" src="./assets/enable-extension.webp" alt="enable extension">
+        <img class="img-enable" src="./assets/enable-extension.webp" alt="enable-extension">
         <li><button title="load demo">Load demo images</button></li>
       </ol>
       <div class="demo-images"></div>
+      <blockquote>
+        <p>Rekognition AI Moderation is likely disabled at times, as the API has a monthly consumption limit.</p>
+        <img src="https://res.cloudinary.com/geduramc/image/upload/s--0EJgLKCA--/v1678133890/web-moderator-captures/screen_2.png" alt="moderator-enable">
+      </blockquote>
     </section>
   </main>
   <footer>
