chore: change text for message blockquote

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
       </ol>
       <div class="demo-images"></div>
       <blockquote>
-        <p>Rekognition AI Moderation is likely disabled at times, as the API has a monthly consumption limit.</p>
+        <p>Rekognition AI Moderation is likely disabled sometimes, this is because the API has a monthly request limit.</p>
         <img src="https://res.cloudinary.com/geduramc/image/upload/s--0EJgLKCA--/v1678133890/web-moderator-captures/screen_2.png" alt="moderator-enable">
       </blockquote>
     </section>
