chore: add geduramc.com url

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
   </main>
   <footer>
     <p>
-      <a class="geduramc" href="https://github.com/geduramc" target="_blank">@geduramc &#9749;</a>
+      <a class="geduramc" href="https://geduramc.com" target="_blank">@geduramc &#9749;</a>
       <span class="separator">|</span>
       <a href="https://cloudinary.com/" target="_blank">
         <img class="cloudinary-logo" src="./assets/cloudinary.svg" alt="cloudinary-logo">
